sample_node_run.yml
apiVersion: v1
kind: Pod
metadata:
  name:  single-pod
spec:
  containers:
    - image: harbor.kay.local/library/k8s:latest
      name:  node-pod
      ports:
        - containerPort: 3000
