create_service_declartive.yml
apiVersion: v1
kind: Service
metadata:
  name:  k8s-app-svc
spec:
  selector:
    app:  rc-nodejs
  type:  NodePort
  ports:
  - name:  app-port
    port:  3000
    nodePort:  30001
